--- a/registrationApp/package.json
+++ b/registrationApp/package.json
@@ -20,12 +20,17 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@capacitor/core": "1.5.0",
+    "@ionic-native/barcode-scanner": "^5.21.5",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.21.5",
     "@ionic-native/screen-orientation": "^5.21.5",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "angular-signature-pad": "0.0.14",
     "core-js": "^2.5.4",
+    "ionicsignaturepad": "^1.0.1",
+    "ngx-qrcode2": "0.0.9",
     "rxjs": "~6.5.1",
     "save": "^2.4.0",
     "tslib": "^1.9.0",
