--- a/registrationApp/package.json
+++ b/registrationApp/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@capacitor/core": "1.5.0",
-    "@ionic-native/barcode-scanner": "^5.21.5",
+    "@ionic-native/barcode-scanner": "^5.22.0",
+    "@ionic-native/base64-to-gallery": "^5.22.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.21.5",
     "@ionic-native/screen-orientation": "^5.21.5",
@@ -61,5 +62,11 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-base64-to-gallery": {}
+    }
+  }
 }
