--- a/registrationApp/package.json
+++ b/registrationApp/package.json
@@ -21,12 +21,17 @@
     "@angular/router": "~8.2.14",
     "@capacitor/core": "1.5.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/geolocation": "^5.22.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@types/leaflet": "^1.5.9",
+    "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
+    "leaflet": "^1.6.0",
     "rxjs": "~6.5.1",
     "save": "^2.4.0",
+    "signature_pad": "^3.0.0-beta.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -55,5 +60,10 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-geolocation": {}
+    }
+  }
 }
