--- a/registrationApp/package.json
+++ b/registrationApp/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.21.5",
     "@ionic-native/geolocation": "^5.22.0",
+    "@ionic-native/native-geocoder": "^5.23.0",
     "@ionic-native/screen-orientation": "^5.21.5",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -34,6 +35,7 @@
     "barcode-scanner": "0.0.2",
     "cordova-android": "^8.1.0",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-nativegeocoder": "^3.2.2",
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
     "ionicsignaturepad": "^1.0.1",
@@ -90,7 +92,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-nativegeocoder": {}
     },
     "platforms": [
       "android"
