--- a/registrationApp/package.json
+++ b/registrationApp/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^9.0.7",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
@@ -23,6 +24,7 @@
     "@ionic-native/barcode-scanner": "^5.22.0",
     "@ionic-native/base64-to-gallery": "^5.22.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/date-picker": "^5.23.0",
     "@ionic-native/file": "^5.21.5",
     "@ionic-native/geolocation": "^5.22.0",
     "@ionic-native/native-geocoder": "^5.23.0",
@@ -59,7 +61,7 @@
     "@ionic/lab": "3.1.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.10.59",
     "codelyzer": "^5.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
