--- a/registrationApp/tsconfig.app.json
+++ b/registrationApp/tsconfig.app.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": ["node"]
+    "types": [
+      "node",
+      "cordova",
+      "cordova-plugin-file"]
   },
   "include": [
     "src/**/*.ts"
