--- a/registrationApp/package.json
+++ b/registrationApp/package.json
@@ -36,6 +36,7 @@
     "angular-signature-pad": "0.0.14",
     "barcode-scanner": "0.0.2",
     "cordova-android": "^8.1.0",
+    "cordova-base64-to-gallery": "^4.1.3",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-nativegeocoder": "^3.2.2",
@@ -44,6 +45,9 @@
     "ionicsignaturepad": "^1.0.1",
     "leaflet": "^1.6.0",
     "ngx-qrcode2": "0.0.9",
+    "normalize-url": "^5.0.0",
+    "path": "^0.12.7",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
     "save": "^2.4.0",
     "screen-orientation": "^1.0.3",
@@ -86,7 +90,9 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-geolocation": {},
-      "phonegap-plugin-barcodescanner": {},
+      "phonegap-plugin-barcodescanner": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
       "cordova-base64-to-gallery": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
